reset.less: Fix rounded inputs on iOS Safari

--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -63,3 +63,11 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+// Remove iOS default input styling
+input, input[type=text] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
+}
